--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -16,13 +16,12 @@ header nav a {
     display: flex;
     align-items: center;
     gap: .2rem;
-    transition: .2s ease;
     padding: .5rem 1rem .5rem 1rem;
 }
 
 .navlink:hover{
     border-radius: 20px;
-    background-color: #F7F7F7;
+    background-color: #EAECEC;
 }
 
 
@@ -50,7 +49,7 @@ nav{
     left: -120px;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     z-index: 1;
 }
 
@@ -66,7 +65,7 @@ nav{
 .dropdown-button:hover{
     scale: 1.2;
     cursor: pointer;
-    background-color:#F7F7F7;
+    background-color:#EAECEC;
 }
 .dropdown-button:active{
     scale: 1;
