--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -102,3 +102,65 @@ main {
 }
 
 
+.producto {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: .75rem;
+}
+
+.producto-imagen-container{
+    grid-column: 1/3;
+    width: 300px;
+    height: 300px;
+    background-color: #F7F7F7;
+    display: grid;
+    place-content: center;
+    border-radius: 20px;
+}
+
+.producto-imagen-container img{
+    width: 200px;
+}
+
+.producto-nombre{
+    grid-column: span 2;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+}
+
+.producto-botones{
+    grid-column: span 2;
+    display: flex;
+    gap: 1rem;
+}
+
+.producto-botones button{
+    width: 150px;
+    height: 32px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+    border: 1px solid black;
+    border-radius: 20px;
+    background-color: white;
+    justify-content: center;
+}
+
+.producto-botones a{
+    width: 100px;
+    height: 32px;
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    background-color: black;
+    gap: .25rem;
+}
+
