--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,3 +1,67 @@
 footer{
-    padding: 1rem 4rem;
+    margin: 1rem 4rem;
+    padding-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #D9D9D9;
+    padding-bottom: 2rem;
+    
 }
+
+h1{
+    
+    color: var(--gray-900, #18181B);
+    font-family: SF Pro Display;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+
+.descripcion-footer{
+width: 396px;
+
+
+color: var(--gray-600, #52525B);
+font-family: SF Pro Display;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 22px;
+
+}
+
+.section-empresa{
+    display: grid;
+    
+  
+}
+.section-ayuda{
+    display: grid;
+}
+
+span{
+    color: var(--gray-900, #18181B);
+    font-family: SF Pro Display;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+}
+
+.section-2{
+  display: flex;
+  gap: 110px;
+}
+
+.section-1{
+    display: grid;
+    gap: 30px;
+  }
+
+  .logos{
+    display: flex;
+    gap:50px;
+  }
