--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -1,5 +1,4 @@
 main {
-    padding: 1rem 4rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -9,19 +8,17 @@ main {
     background-color: #F7F7F7;
     width: 250px;
     height: 30px;
-    border-radius: 20px;
     border: none;
 }
 
 
 .search-container{
-    border-radius: 20px;
     width: 250px;
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1rem;
+    padding: 0 .5rem;
     background-color: #F7F7F7;
 }
 
@@ -49,7 +46,6 @@ main {
 .banner {
     width: 100%;
     background-color: #E5030B;
-    border-radius: 20px;
     color: white;
     height: 250px;
     display: flex;
@@ -59,9 +55,6 @@ main {
     transition: .1s ease;
 }
 
-.banner:hover {
-    scale: 1.0075;
-}
 
 .banner-text{
     padding: 0 2rem;
@@ -75,7 +68,6 @@ main {
     color: black;
     font-weight: 600;
     padding: .3rem 1rem .3rem .75rem;
-    border-radius: 20px;
     display: flex;
     align-items: center;
     width: fit-content;
@@ -102,14 +94,16 @@ main {
 .articulos {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
     gap: 1rem;
 }
 
 .seccion-articulos-rubro{
     display: grid;
     gap: 1rem;
-    padding-bottom: 3rem;
+    text-align: center;
+    padding-bottom: 4rem;
+    place-content: center;
 }
 
 .barra-filtros{
@@ -117,6 +111,7 @@ main {
     align-items: center;
     gap: 1rem;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 
@@ -128,7 +123,6 @@ main {
     display: flex;
     align-items: center;
     gap: .25rem;
-    border-radius: 20px;
     background-color: black;
     border: 1px solid black;
     justify-content: center;
@@ -147,4 +141,11 @@ main {
 }
 
 
+.seccion-articulos-rubro h2 {
+    font-size: 20px;
+    padding: .5rem 0 .5rem 0;
+    width: 100%;
+    background-color: #E5030B;
+    color: white;
+}
 
