--- a/src/styles/ListaFiltro.css
+++ b/src/styles/ListaFiltro.css
@@ -9,7 +9,6 @@
     align-items: center;
     height: 30px;
     padding: 0 .75rem;
-    border-radius: 100px;
     border: 1px solid #EAECEC;
 }
 
@@ -31,7 +30,6 @@
     justify-content: center;
     flex-direction: column;
     padding: 1rem;
-    border-radius: 20px;
     border: 1px solid #EAECEC;
     background-color: white;
 }
@@ -40,13 +38,12 @@
     width:150px;
     padding: .5rem 1rem;
     font-size: 13.3px;
-    border-radius: 20px;
-    border: 1px solid #F7F7F7;
-    background-color:#F7F7F7 ;
+    border: 1px solid #EAECEC;
+    background-color: white;
 }
 .listaDropped button:hover{
     cursor: pointer;
-    background-color: #e0e0e0;
+    background-color: #F7F7F7;
 }
 
 .lista-container {
