pagina de detalle de articulo terminada

--- a/src/styles/ListaFiltro.css
+++ b/src/styles/ListaFiltro.css
@@ -46,6 +46,12 @@
     background-color: #F7F7F7;
 }
 
+.listaDropped button:active{
+    background-color: #cbcbcb;
+}
+
+
+
 .lista-container {
     position: relative;
 }
