--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,67 +1,107 @@
 footer{
-    margin: 1rem 4rem;
-    padding-top: 3rem;
+    padding: 3rem 4rem;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    border-top: 1px solid #D9D9D9;
-    padding-bottom: 2rem;
-    
+    background-color:#E5030B;
+    color: white;
+    overflow: hidden;
+    position: relative;
 }
 
-h1{
-    
-    color: var(--gray-900, #18181B);
-    font-family: SF Pro Display;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
+footer b {
+    font-size: 1.5rem;
 }
+
 
 
 .descripcion-footer{
-width: 396px;
-
-
-color: var(--gray-600, #52525B);
-font-family: SF Pro Display;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 22px;
-
-}
-
-.section-empresa{
-    display: grid;
-    
-  
-}
-.section-ayuda{
-    display: grid;
-}
-
-span{
-    color: var(--gray-900, #18181B);
+    width: 396px;
     font-family: SF Pro Display;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 40px;
+    line-height: 25px;
+}
+
+.section-empresa{
+    display: grid;
+}
+.section-ayuda{
+    display: grid;
+    gap: 1rem;
+}
+
+.section-2 a{
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
 }
 
 .section-2{
   display: flex;
-  gap: 110px;
+  gap: 5rem;
+}
+
+.logobs{
+    transform: rotateZ(-25deg);
+    position: absolute;
+    left: 37%;
+    top: -80px;
+    width: 500px;
 }
 
 .section-1{
     display: grid;
-    gap: 30px;
-  }
+    gap: 1rem;
+}
 
-  .logos{
+.logos{
     display: flex;
     gap:50px;
-  }
+    padding-top: .5rem;
+}
+
+@media (max-width:900px) {
+    footer b {
+        font-size:1rem;
+    }
+    footer{
+        gap: 1rem;
+        padding: 1rem 1rem;
+    }
+    .section-1{
+        gap: .5rem;
+    }
+    .descripcion-footer{
+        max-width: 200px;
+        font-size: .75rem;
+        line-height: 15px;
+    }
+    .section-2{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .section-empresa, .section-ayuda{
+        display: flex;
+        flex-direction: column;
+        gap: .2rem;
+    }
+
+    .section-empresa a, .section-ayuda a{
+        display: flex;
+        flex-direction: column;
+        font-size: .75rem;
+    }
+    .logos{
+        gap: 1rem;
+    }
+}
+
+
+
+@media (max-width:1360px) {
+    
+    .logobs {
+        display: none;
+    }
+}
