--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,6 +3,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 4rem;
+    border-bottom: 1px solid #EAECEC;
 }
 
 
