carrito funcionando faltan hacer dinamico el resumen y conectar el detalle

--- a/src/styles/Carrito.css
+++ b/src/styles/Carrito.css
@@ -2,4 +2,87 @@
     min-height: 100vh;
     display: grid;
     place-content: center;
+    gap: 2rem;
+}
+.titulo-carrito {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+.titulo-carrito span {
+    font-size: 14px;
+    color: #929191;
+}
+
+.mensaje-vacio{
+    text-align: center;
+    color: #a90409;
+    max-width: 450px;
+    background-color: #ea7c80;
+    border: 1px solid #a90409;
+    padding: 1rem;
+}
+
+
+.resumen-carrito {
+    background-color: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: fit-content;
+    padding: .5rem 1.5rem .5rem 1.5rem;
+    font-weight: 600;
+}
+.resumen-carrito div {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 0 ;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.resumen-carrito article {
+    padding: 1rem 0;
+}
+
+.resumen-carrito article button {
+    cursor: pointer;
+    justify-content: center;
+    display: flex;
+    gap: .5rem;
+    padding: .5rem 1rem;
+    width: 100%;
+    background-color: black;
+    color: white;
+    transition: .1s ease;
+    border: none;
+}
+.resumen-carrito article button:hover {
+    scale: 1.025;
+}
+.resumen-carrito article button:active {
+    scale: 0.975;
+}
+
+.seguir-viendo-boton{
+    padding: .5rem 1rem .5rem 0;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    text-decoration: none;
+    color: black ;
+    transition: .1s ease;
+    width: fit-content;
+}
+
+.seguir-viendo-boton:hover{
+    padding: .5rem 1rem .5rem .75rem;
+    background-color: #F7F7F7;
+}
+
+.container-principal-carrito{
+    display: flex;
+    gap: 3rem;
+}
+.articulos-carrito{
+    padding-bottom: 1.5rem;
 }
