--- a/src/styles/ArticuloCarrito.css
+++ b/src/styles/ArticuloCarrito.css
@@ -1,9 +1,10 @@
 .articulo-carrito {
     display: flex;
+    gap: 2rem;
     justify-content: space-between;
     border-bottom: 1px solid #f3f3f3;
     padding: 2rem 0;
-    width: 650px;
+    max-width: 650px;
 }
 
 .articulo-carrito-info{
@@ -89,4 +90,12 @@
 
 .cantidad-unidades-carrito button:active{
     background-color: #D9D9D9;
+}
+
+
+@media (max-width : 700px) {
+    .articulo-carrito {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
