--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -89,7 +89,12 @@ main {
 }
 
 
-
+.art-notfound{
+    display: grid;
+    place-content: center;
+    padding: 1rem;
+    min-height: 50vh;
+}
 
 .articulos {
     display: flex;
