--- a/src/styles/ListaFiltro.css
+++ b/src/styles/ListaFiltro.css
@@ -23,22 +23,21 @@
 
 .listaDropped{
     position: absolute;
-    gap: 1rem;
     top: 40px;
     left: 0;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 1rem;
     border: 1px solid #EAECEC;
     background-color: white;
 }
 
 .listaDropped button{
+    text-align: start;
     width:150px;
-    padding: .5rem 1rem;
+    padding: .75rem 1rem;
     font-size: 13.3px;
-    border: 1px solid #EAECEC;
+    border: none;
     background-color: white;
 }
 .listaDropped button:hover{
